--- a/app/src/main/res/layout/activity_add_atividade.xml
+++ b/app/src/main/res/layout/activity_add_atividade.xml
@@ -119,17 +119,18 @@
 
             <!-- Localização -->
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp">
+                android:layout_marginBottom="16dp"
+                android:hint="Local">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
                     android:id="@+id/etLocal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Localização"
-                    android:inputType="textCapSentences"/>
+                    android:inputType="none"
+                    android:completionThreshold="1"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
