--- a/app/src/main/res/layout/activity_filtro_atividades.xml
+++ b/app/src/main/res/layout/activity_filtro_atividades.xml
@@ -100,8 +100,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="none"
-                    android:focusable="false"
-                    android:clickable="true"/>
+                    android:completionThreshold="1"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!-- Filtro por Local -->
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:hint="Local">
+
+                <AutoCompleteTextView
+                    android:id="@+id/etFiltroLocal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"
+                    android:completionThreshold="1"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
